welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:2: error: type mismatch;
 found   : Int(4)
 required: Boolean
while({estSurBiscuit()<4 ==true})
                       ^